@@ -55,7 +55,7 @@ class AOChatWrapper_Core extends BasePassiveModule
 	{
 		$user = ucfirst(strtolower($user));
 		echo "Depreciated AOChatWrapper::get_uid() called for $user. Backtrace:\n";
-		debug_print_backtrace();
+		$this->bot->log("DEBUG", "BACKTRACE", $this->bot->debug_bt());
 		$this->debug_output("Deprecated call to core('chat')->get_uid(). Use bot->core('player')->id($user)\n");
 		return $this->bot->core('player')->id($user);
 	}
@@ -68,7 +68,7 @@ class AOChatWrapper_Core extends BasePassiveModule
 		$user = ucfirst(strtolower($user));
 		$this->debug_output("Deprecated call to core('chat')->get_uname(). Use bot->core('player')->name($user)\n");
 		echo "Depreciated AOChatWarapper::get_uname() called for $user. Backtrace:\n";
-		debug_print_backtrace();
+		$this->bot->log("DEBUG", "BACKTRACE", $this->bot->debug_bt());
 		return $this->bot->core('player')->name($user);
 	}
 
